--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon webpack-dev-server --inline --content-base ."
+    "start": "webpack-dev-server --inline --content-base ."
   },
   "author": "",
   "license": "ISC",
@@ -14,9 +14,13 @@
     "react": "^16.0.0",
     "react-bootstrap": "^0.32.1",
     "react-dom": "^16.0.0",
+    "react-redux": "^5.0.7",
     "react-router": "^2.0.0",
     "react-router-dom": "^4.2.2",
-    "react-tap-event-plugin": "^3.0.2"
+    "react-tap-event-plugin": "^3.0.2",
+    "redux": "^3.7.2",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
     "babel-core": "^6.5.1",
@@ -24,7 +28,10 @@
     "babel-preset-es2015": "^6.5.0",
     "babel-preset-react": "^6.5.0",
     "css-loader": "^0.28.11",
+    "html-loader": "^0.5.5",
+    "html-webpack-plugin": "^3.1.0",
     "http-server": "^0.8.5",
+    "react-scripts": "^1.1.2",
     "style-loader": "^0.20.3",
     "webpack": "^1.12.13",
     "webpack-dev-server": "^1.14.1"
