--- a/package.json
+++ b/package.json
@@ -9,14 +9,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.18.0",
+    "axios": "0.13.1",
     "material-ui": "^0.20.0",
-    "react": "^16.0.0",
+    "react": "^15.1.0",
     "react-bootstrap": "^0.32.1",
-    "react-dom": "^16.0.0",
+    "react-dom": "^15.1.0",
     "react-redux": "^5.0.7",
-    "react-router": "^2.0.0",
-    "react-router-dom": "^4.2.2",
+    "react-router": "^2.5.0",
     "react-tap-event-plugin": "^3.0.2",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
