--- a/package.json
+++ b/package.json
@@ -14,12 +14,12 @@
     "react": "^15.1.0",
     "react-bootstrap": "^0.32.1",
     "react-dom": "^15.1.0",
-    "react-redux": "^5.0.7",
+    "react-redux": "4.4.5",
     "react-router": "^2.5.0",
     "react-tap-event-plugin": "^3.0.2",
-    "redux": "^3.7.2",
+    "redux": "3.5.2",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "2.1.0"
   },
   "devDependencies": {
     "babel-core": "^6.5.1",
@@ -30,7 +30,9 @@
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.1.0",
     "http-server": "^0.8.5",
+    "lodash": "4.13.1",
     "react-scripts": "^1.1.2",
+    "shortid": "2.2.6",
     "style-loader": "^0.20.3",
     "webpack": "^1.12.13",
     "webpack-dev-server": "^1.14.1"
