--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-tap-event-plugin": "^3.0.2",
     "redux": "3.5.2",
     "redux-logger": "^3.0.6",
+    "redux-promise": "^0.5.3",
     "redux-thunk": "2.1.0"
   },
   "devDependencies": {
