--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "0.13.1",
     "material-ui": "^0.20.0",
+    "path": "^0.12.7",
     "react": "^15.1.0",
     "react-bootstrap": "^0.32.1",
     "react-dom": "^15.1.0",
