--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "react-dom": "^15.1.0",
     "react-redux": "4.4.5",
     "react-router": "^2.5.0",
-    "react-tap-event-plugin": "^3.0.2",
+    "react-tap-event-plugin": "2.0.1",
     "redux": "3.5.2",
     "redux-logger": "^3.0.6",
     "redux-promise": "^0.5.3",
