--- a/package.json
+++ b/package.json
@@ -9,8 +9,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "auth0-js": "^9.4.2",
     "axios": "0.13.1",
+    "install": "^0.11.0",
+    "jwt-decode": "^2.2.0",
     "material-ui": "^0.20.0",
+    "material-ui-icons": "^1.0.0-beta.36",
+    "npm": "^5.8.0",
     "path": "^0.12.7",
     "react": "^15.1.0",
     "react-bootstrap": "^0.32.1",
@@ -21,7 +26,8 @@
     "redux": "3.5.2",
     "redux-logger": "^3.0.6",
     "redux-promise": "^0.5.3",
-    "redux-thunk": "2.1.0"
+    "redux-thunk": "2.1.0",
+    "sha256": "^0.2.0"
   },
   "devDependencies": {
     "babel-core": "^6.5.1",
