--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@material-ui/icons": "^1.0.0-beta.42",
     "auth0-js": "^9.4.2",
     "axios": "0.13.1",
     "install": "^0.11.0",
